# -

./: .gitignore  0.1.0  0.2.0  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  LEGAL_DISCLAIMER.md  README.md  SECURITY.md  biome.jsonc  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsup.config.ts  turbo.json  windows-setup.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  installer-smoke-macos.yml  static.yml
apps/relay/: .env.example  README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/relay/src/: app.ts  env.ts  index.ts  server.ts
apps/relay/src/handlers/: api.ts
apps/relay/src/lib/: auth.ts  logger.ts  schemas.ts
apps/relay/src/lib/core/: create-context.ts  trpc.test.ts  trpc.ts
apps/relay/src/routers/: admin.ts  daemon.ts  index.ts  public.ts
apps/relay/src/tests/: app.test.ts
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/approvals/[approvalId]/: approval-form.tsx  page.tsx
apps/web/src/app/daemons/[daemonId]/: page.tsx
apps/web/src/components/: approval-request-card.tsx  page-shell.tsx
apps/web/src/lib/: approval-capability.ts  approval-display.ts  config.ts  crypto.ts  relay-client.ts  relay-schemas.ts  relay.ts  routes.ts  single-flight.ts  types.ts
apps/web/test/: approval-form.test.tsx
crates/vault-cli-admin/: Cargo.toml
crates/vault-cli-admin/src/: io_utils.rs  main.rs  shared_config.rs  tui.rs
crates/vault-cli-admin/src/tui/: amounts.rs  token_rpc.rs  utils.rs
crates/vault-cli-agent/: Cargo.toml
crates/vault-cli-agent/src/: io_utils.rs  main.rs
crates/vault-cli-daemon/: Cargo.toml
crates/vault-cli-daemon/src/: main.rs  relay_sync.rs
crates/vault-cli-daemon/tests/: system_keychain_helper_acl.rs
crates/vault-daemon/: Cargo.toml
crates/vault-daemon/src/: lib.rs  persistence.rs  tests.rs
crates/vault-daemon/src/daemon_parts/: api_impl_and_utils.rs  core_helpers.rs  types_api_rpc.rs
crates/vault-daemon/src/tests_parts/: part1.rs  part2.rs  part3.rs  part4.rs
crates/vault-domain/: Cargo.toml
crates/vault-domain/src/: action.rs  address.rs  approval.rs  constants.rs  error.rs  keys.rs  lib.rs  nonce.rs  policy.rs  request.rs  scope.rs  serde_helpers.rs  session.rs  signature.rs  tests.rs  u128_as_decimal_string.rs
crates/vault-policy/: Cargo.toml
crates/vault-policy/src/: engine.rs  error.rs  lib.rs  report.rs  tests.rs  tests_explain.rs
crates/vault-sdk-agent/: Cargo.toml
crates/vault-sdk-agent/src/: lib.rs
crates/vault-signer/: Cargo.toml
crates/vault-signer/src/: lib.rs
crates/vault-signer/tests/: secure_enclave_acl.rs
crates/vault-transport-unix/: Cargo.toml
crates/vault-transport-unix/src/: lib.rs
crates/vault-transport-xpc/: Cargo.toml
crates/vault-transport-xpc/src/: client_codec_api.rs  lib.rs  tests.rs
crates/vault-transport-xpc/tests/: e2e_flow.rs
releases/: v0.1.0.md
scripts/: .env.example  build-installer-bundle.mjs  install-cli-launcher.mjs  install-rust-binaries.mjs  installer.sh  merkl-auto-repay.mjs  package.json  policy.yaml  run-installer-smoke.sh  run-skills-installer-smoke.sh  run-tests-isolated.mjs  run-ts-tests.mjs  unsupported-release-surface.mjs
scripts/launchd/: install-user-daemon.sh  run-agentpay-daemon.sh  run-vault-daemon.sh  uninstall-user-daemon.sh
skills/add-plugin/: SKILL.md
skills/add-plugin/agents/: openai.yaml
skills/agentpay-sdk/: SKILL.md
skills/agentpay-sdk/agents/: cursor-agentpay-sdk.mdc  openai.yaml
skills/agentpay-sdk/references/: capabilities.md  install-and-workflows.md
src/: cli.ts
src/lib/: admin-daemon-socket.js  admin-daemon-socket.ts  admin-guard.js  admin-guard.ts  admin-passthrough.js  admin-passthrough.ts  admin-reset.js  admin-reset.ts  admin-setup.js  admin-setup.ts  agent-auth-clear.js  agent-auth-clear.ts  agent-auth-forwarding.js  agent-auth-forwarding.ts  agent-auth-migrate.js  agent-auth-migrate.ts  agent-auth-revoke.js  agent-auth-revoke.ts  agent-auth-rotate.js  agent-auth-rotate.ts  agent-auth-token.js  agent-auth-token.ts  agent-auth.js  agent-auth.ts  asset-broadcast.js  asset-broadcast.ts  bitrefill.ts  bootstrap-artifacts.js  bootstrap-artifacts.ts  bootstrap-credentials.js  bootstrap-credentials.ts  cli-version.js  cli-version.ts  config-amounts.js  config-amounts.ts  config-mutation.js  config-mutation.ts  fs-trust.js  fs-trust.ts  hidden-tty-prompt.js  (+37 more)
src/plugins/: bitrefill.js  bitrefill.ts  index.ts  types.ts
test/: admin-daemon-socket.test.mjs  admin-guard.test.mjs  admin-passthrough.test.mjs  admin-reset.test.mjs  admin-setup.test.mjs  agent-auth-clear.test.mjs  agent-auth-forwarding.test.mjs  agent-auth-migrate.test.mjs  agent-auth-revoke.test.mjs  agent-auth-rotate.test.mjs  agent-auth.test.mjs  asset-broadcast.test.mjs  bitrefill-cli.test.mjs  bootstrap-artifacts.test.mjs  bootstrap-credentials.test.mjs  cli-mocked-e2e.test.mjs  cli-smoke.test.mjs  cli-version.test.mjs  config-amounts.test.mjs  config-mutation.test.mjs  config.test.mjs  fs-trust.test.mjs  install-rust-binaries.test.mjs  installer-smoke-script.test.mjs  keychain.test.mjs  launchd-assets.test.mjs  launchd-keychain-helper.test.mjs  local-admin-access.test.mjs  network-selection.test.mjs  passthrough-security.test.mjs  rpc-guard.test.mjs  rpc.test.mjs  run-tests-isolated.test.mjs  rust-binary.test.mjs  rust.test.mjs  setup-agentpay-script.test.mjs  signed-tx.test.mjs  status-repair-cli.test.mjs  sudo.test.mjs  vault-password-forwarding.test.mjs  (+12 more)
zarf/docker/valkey/: compose.yml  valkey.conf
zarf/serverless/relay/: README.md  development-serverless.yml  local-serverless.yml  production-serverless.yml
zarf/serverless/relay/src/: handler.ts
