[package]
name = "agentpay-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
hex.workspace = true
libc.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rpassword.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true
vault-daemon = { path = "../vault-daemon" }
vault-domain = { path = "../vault-domain" }
vault-signer = { path = "../vault-signer" }
vault-transport-unix = { path = "../vault-transport-unix" }
