[package]
name = "agentpay-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
hex.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
rpassword.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true
vault-daemon = { path = "../vault-daemon" }
vault-domain = { path = "../vault-domain" }
vault-sdk-agent = { path = "../vault-sdk-agent" }
vault-signer = { path = "../vault-signer" }
vault-transport-unix = { path = "../vault-transport-unix" }

[dev-dependencies]
vault-policy = { path = "../vault-policy" }
