[package]
name = "agentpay-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chacha20poly1305.workspace = true
clap.workspace = true
hex.workspace = true
libc.workspace = true
nix = { version = "0.30", features = ["user"] }
rpassword.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
vault-daemon = { path = "../vault-daemon" }
vault-domain = { path = "../vault-domain" }
vault-signer = { path = "../vault-signer" }
vault-transport-unix = { path = "../vault-transport-unix" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
security-framework.workspace = true
security-framework-sys.workspace = true
