[package]
name = "vault-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
alloy-primitives.workspace = true
argon2.workspace = true
async-trait.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
k256.workspace = true
nix = { version = "0.30", features = ["user"] }
libc.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true
reqwest.workspace = true
zeroize.workspace = true
vault-domain = { path = "../vault-domain" }
vault-policy = { path = "../vault-policy" }
vault-signer = { path = "../vault-signer" }

[dev-dependencies]
