[package]
name = "vault-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
vault-domain = { path = "../vault-domain" }

[dev-dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
