[package]
name = "vault-sdk-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
zeroize.workspace = true
vault-daemon = { path = "../vault-daemon" }
vault-domain = { path = "../vault-domain" }

[dev-dependencies]
tokio.workspace = true
vault-policy = { path = "../vault-policy" }
vault-signer = { path = "../vault-signer" }
