[package]
name = "vault-signer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
interactive-secure-enclave-tests = []

[dependencies]
async-trait.workspace = true
core-foundation.workspace = true
hex.workspace = true
k256.workspace = true
libc.workspace = true
serde.workspace = true
security-framework.workspace = true
security-framework-sys.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
vault-domain = { path = "../vault-domain" }
zeroize.workspace = true

[dev-dependencies]
tokio.workspace = true
