[package]
name = "vault-transport-unix"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
nix = { version = "0.30", features = ["user", "socket"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
vault-daemon = { path = "../vault-daemon" }
vault-domain = { path = "../vault-domain" }
vault-policy = { path = "../vault-policy" }
vault-signer = { path = "../vault-signer" }
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
time.workspace = true
