[package]
name = "vault-transport-xpc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
block.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true
vault-daemon = { path = "../vault-daemon" }
vault-domain = { path = "../vault-domain" }
vault-policy = { path = "../vault-policy" }
vault-signer = { path = "../vault-signer" }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true
